--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage":   "https://Raypankaj.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
