--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.22.0"
@@ -25,8 +26,8 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.0",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
-    "vite": "^5.4.0",
-    "gh-pages": "^6.1.1"
+    "vite": "^5.4.0"
   }
 }
